--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,11 @@
         android:layout_height="wrap_content"
         android:text="获取福利"
         />
+    <!--<GridView-->
+        <!--android:id="@+id/id_gv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:numColumns="5"-->
+        <!--/>-->
 
 </RelativeLayout>
