--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,6 +10,12 @@
         android:layout_height="wrap_content"
         android:text="获取福利"
         />
+    <Button
+        android:id="@+id/id_go_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="去SecondActivity"
+        />
     <!--<GridView-->
         <!--android:id="@+id/id_gv"-->
         <!--android:layout_width="match_parent"-->
@@ -17,4 +23,4 @@
         <!--android:numColumns="5"-->
         <!--/>-->
 
-</RelativeLayout>
+</LinearLayout>
